# pythonBots

./: config_demo.py  data_1m.csv  junk.json  main.py  main_2.py  main_3.py  pyproject.toml  rsi_alert.py  scrap.py  test-cappy.py  test_human_selenium.py  test_selenium.py  trade_log.csv  trades_log.csv  vwap_sweeper.py
modular_bot/: api_client.py  backtester.py  config.py  filters.py  main.py  strategies.py  test_strategies.py
modular_bot/data/: SPY_20250101_20250709.csv
modular_bot/reports/: MaCrossStrategy_SPY_20250728_183209.md  MaCrossStrategy_SPY_20250728_183826.md  MaCrossStrategy_SPY_20250728_183905.md  MaCrossStrategy_SPY_20250728_184545.md  reporting.py
