[tool.poetry]
name = "pythonbots"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
requests = "^2.32.4"
plotly = "^6.1.2"
selenium = "^4.33.0"
setuptools = "^80.9.0"
pytest = "^8.4.1"
poetry-core = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
